Fix build if openexr isn't present

BUG:310900